# Capstone

All OLD/.metadata/.plugins/org.eclipse.cdt.core/: BasicXlib.1398054087911.pdom  language.settings.xml
All OLD/.metadata/.plugins/org.eclipse.core.resources/.root/: 12.tree
All OLD/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
All OLD/.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
All OLD/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi  workbench[Conflict].xmi
All OLD/.metadata/.plugins/org.eclipse.jdt.ui/: dialog_settings.xml
All OLD/.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings (1).xml  workingsets.xml
All OLD/.metadata/.plugins/org.eclipse.wst.sse.core/: task-tags.properties
All OLD/BasicXlib/: .cproject
All OLD/Hello World/: .cproject
All OLD/Hello World/Debug/: makefile
All OLD/Hello World/Debug/src/: Palindrome.d  subdir.mk
All OLD/Hello World/src/: Palindrome.cpp
All OLD/Oculus Test/: .cproject  test.cpp
All OLD/Oculus Test/Debug/: sources.mk  subdir.mk
All OLD/OculusSDK/: readme.txt
All OLD/OculusSDK/Samples/OculusRoomTiny/: RenderTiny_Device.h  RenderTiny_GL_Device.h  Win32_OculusRoomTiny.cpp
All OLD/OculusSDK/Samples/OculusWorldDemo/: OculusWorldDemo.cpp  Player.cpp  Player.h
All OLD/OculusSDK/Samples/SensorBox/: SensorBoxTest.cpp
All OLD/Old/BasicXlib/: .project  test.cpp
All OLD/Old/BasicXlib/Debug/: makefile
All OLD/Old/Oculus Test/: .project
All OLD/Old/Oculus Test/Debug/: makefile
All OLD/Old/X Server/: .cproject  .project  test.cpp
All OLD/Old/X Server/Debug/: makefile
All OLD/VRXWrapper/: .cproject  .project  CMakeLists.txt  backend.cpp  backend.h  bridge.cpp  common.h  config.h.in  debug.cpp  debug.h  frontend.cpp
All OLD/VRXWrapper/Debug/: sources.mk  subdir.mk
All OLD/VRXWrapper/Debug/hydra/: subdir.mk
All OLD/VRXWrapper/Debug/openni/: subdir.mk
All OLD/VRXWrapper/Release/: makefile  subdir.mk
All OLD/VRXWrapper/Release/hydra/: subdir.mk
All OLD/VRXWrapper/Release/openni/: subdir.mk
All OLD/VRXWrapper/Release/vertex/: Matrix.d  subdir.mk
All OLD/VRXWrapper/hydra/: Hydra.cpp  Hydra.h
All OLD/VRXWrapper/openni/: CMakeLists.txt
Current/OculusSDK/: LICENSE.gdoc  Makefile  readme.gdoc
Current/OculusSDK/Doc/: Oculus_SDK_Overview.gdoc
Current/OculusSDK/Firmware/: readme.gdoc
Current/ovrTest/: test.cpp
Current/vr-x-wrapper/: CMakeLists.gdoc  SRC Doc.txt  SRC Doc~  bridge.h  frontend.h  panels.cpp  panels.h  vrx.cpp
Current/vr-x-wrapper/hydra/: CMakeLists.gdoc
Current/vr-x-wrapper/openni/: CMakeLists.gdoc  openni.cpp  openni.h
Current/vr-x-wrapper/vertex/: CMakeLists.gdoc
Current/vrx/: CMakeCache.gdoc  Makefile  cmake_install.cmake  config.h  install_manifest.gdoc  launch.sh  launch.sh.save  vrx  vrxlaunch.sh  windowlaunch.sh  xlaunch.sh
Current/vrx/vertex/: Makefile  cmake_install.cmake
(+94 files in other folders)
